--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>{{ page.title }} - {{ site.title }}</title>
-  <meta name="description" content="Virtualized container for portable, reproducible data science">
+  <meta name="description" content="Compute environments for portable, reproducible data science">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
         <h1 class="title">{{ site.title }}</h1>
     </header>
     <div id="container">
-      <p class="tagline"></p>
+        <p class="tagline">{{ site.tagline }}</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
