--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,18 +22,21 @@
 
   <div class="wrapper">
     <header>
-        <h1 class="title">{{ site.title }}</h1>
+        <h1 class="title">{{ site.title }} - {{ page.title }}</h1>
     </header>
     <div id="container">
         <p class="tagline">{{ site.tagline }}</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/dlab-berkeley/collaboratool/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/dlab-berkeley/collaboratool/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/dlab-berkeley/collaboratool/zipball/master"
+        class="download-button zip"><span>Download Recipe</span></a>
           <a href="https://github.com/dlab-berkeley/collaboratool" class="code">View Collaboratool on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
+          <a href="/">Overview</a> &middot;
+          <a href="/existing.html">Related</a> &middot;
+          <a href="/meta-features.html">Meta-Features</a>
         </div>
         <article class="markdown-body">
 
@@ -49,7 +52,9 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>Based on a <a href="https://pages.github.com/">GitHub Pages</a>
+            <br/>theme by
+            <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
       </div>
     </footer>
   </div>
