--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-        <h1 class="title">{{ site.title }} - {{ page.title }}</h1>
+        <h1 class="title">{{ site.title }} </h1>
     </header>
     <div id="container">
         <p class="tagline">{{ site.tagline }}</p>
@@ -35,11 +35,11 @@
         </div>
         <span class="blc"></span><span class="trc"></span>
           <a href="/">Overview</a> &middot;
-          <a href="/existing.html">Related</a> &middot;
-          <a href="/meta-features.html">Meta-Features</a>
+          <a href="/existing.html">Existing projects</a> &middot;
+          <a href="/meta-features.html">Meta-features</a>
         </div>
         <article class="markdown-body">
-
+            <h2>{{ page.title }}</h2>
             {{ content }}
 
         </article>
