updated webpages to give user and provisioner instructions; added a "Using BCE" tab to main page in _layouts/default.html; changed overall title in _config.yml, added using-bce.md as the main page of the "Using BCE" tab and using-{virtualbox,ec2}.md as pages with additional info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
         </div>
         <span class="blc"></span><span class="trc"></span>
           <a href="/">Overview</a> &middot;
+          <a href="/using-bce.html">Using BCE</a> &middot;
           <a href="/existing.html">Existing projects</a> &middot;
           <a href="/meta-features.html">Meta-features</a>
         </div>
